fix: center align footer in tablet and desktop

--- a/src/Components/UI/Form/Form.css
+++ b/src/Components/UI/Form/Form.css
@@ -35,32 +35,34 @@
   .form-button {
     text-align: left;
   }
-}
-.form-group {
-  margin-top: 1.5em;
-}
-.form-input {
-  height: 2em;
-  background-color: #000 !important;
-  border: none;
-  border-bottom: #595959 thin solid;
-  color: #7c7c7c !important;
-  font: inherit;
-}
-.form-group label {
-  width: fit-content;
-  margin-top: 3em;
-  display: block;
-}
-.required {
-  font-weight: 300;
-  font-style: italic;
-}
-.error-message {
-  width: fit-content;
-  color: #de4330;
-  margin-bottom: 2em;
-}
-.error {
-  border-bottom: #de4330 thin solid;
+
+  .form-group {
+    margin-top: 1.5em;
+  }
+  .form-input {
+    height: 2em;
+    background-color: #000 !important;
+    border: none;
+    border-bottom: #595959 thin solid;
+    color: #7c7c7c !important;
+    font: inherit;
+    width: 196px;
+  }
+  .form-group label {
+    width: fit-content;
+    margin-top: 3em;
+    display: block;
+  }
+  .required {
+    font-weight: 300;
+    font-style: italic;
+  }
+  .error-message {
+    width: fit-content;
+    color: #de4330;
+    margin-bottom: 2em;
+  }
+  .error {
+    border-bottom: #de4330 thin solid;
+  }
 }
